# yet_another_ds_cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
