[build-system]
requires = ["{{cookiecutter.poetry_version}}"]
build-backend = "poetry.core.masonry.api"

[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = [{name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}"}]
dynamic = ["version", "requires-python", "dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~{{cookiecutter.python_version}}"
numpy = "*"
pandas = "*"
streamlit = "*"
# urllib3 = "1.26.15"  # Needed for a bug when running `poetry install` on docker (`strict` issue)

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
pre-commit = "*"
